force-app/main/default/objects/Alertas__c/Alertas__c.object-meta.xml
<CustomObject>
    <description>Almacena la parametrización suministrada por el cliente para el manejo de alertas sobre la cuenta.</description>
    <label>Alerta</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Nombre de Alertas</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alertas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>