force-app/main/default/objects/Alertas__c/fields/Activo__c.field-meta.xml
<CustomField>
    <fullName>Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo parametrizado para SLE</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>