force-app/main/default/objects/Alertas__c/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <description>Campo que almacena el Contrato de la alerta</description>
    <label>Contrato</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>Alertas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>