force-app/main/default/objects/Alertas__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Campo que almacena el correo electrónico de la alerta</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>