force-app/main/default/objects/Alertas__c/fields/Modulo_SLE__c.field-meta.xml
<CustomField>
    <fullName>Modulo_SLE__c</fullName>
    <description>Campo parametrizado para SLE</description>
    <label>Modulo</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capitalizadora</fullName>
            </value>
            <value>
                <fullName>Información y Medios</fullName>
            </value>
            <value>
                <fullName>Medicalización</fullName>
            </value>
            <value>
                <fullName>Prevención</fullName>
            </value>
            <value>
                <fullName>Seguros de Vida</fullName>
            </value>
            <value>
                <fullName>Seguros Generales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>