force-app/main/default/objects/Alertas__c/fields/Movil__c.field-meta.xml
<CustomField>
    <fullName>Movil__c</fullName>
    <description>Campo que almacena el Movil de la alerta</description>
    <label>Movil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>