force-app/main/default/objects/Alertas__c/fields/Numero_de_Documento__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Documento__c</fullName>
    <description>Almacena el Numero de documento relacionado en la alerta</description>
    <label>Número de Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>