force-app/main/default/objects/Alertas__c/fields/P_liza_de_seguro__c.field-meta.xml
<CustomField>
    <fullName>P_liza_de_seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Póliza de seguro</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>Alertas</relationshipName>
    <type>Lookup</type>
</CustomField>