force-app/main/default/objects/Alertas__c/fields/Participante_de_p_liza_de_seguro__c.field-meta.xml
<CustomField>
    <fullName>Participante_de_p_liza_de_seguro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participante de póliza de seguro</label>
    <referenceTo>InsurancePolicyParticipant</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>CSAlertas</relationshipName>
    <type>Lookup</type>
</CustomField>