force-app/main/default/objects/Alertas__c/fields/Participante_de_reclamaci_n__c.field-meta.xml
<CustomField>
    <fullName>Participante_de_reclamaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participante de reclamación</label>
    <referenceTo>ClaimParticipant</referenceTo>
    <relationshipLabel>Alertas</relationshipLabel>
    <relationshipName>CSAlertas</relationshipName>
    <type>Lookup</type>
</CustomField>