force-app/main/default/objects/Alertas__c/fields/Tipo_de_documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_documento__c</fullName>
    <description>Campo que almacena el tipo de documento de la alerta</description>
    <label>Tipo de documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cedula de Ciudadanía</fullName>
            </value>
            <value>
                <fullName>Nit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>