force-app/main/default/objects/Alertas__c/listViews/Todas_las_alertas.listView-meta.xml
<ListView>
    <fullName>Todas_las_alertas</fullName>
    <columns>NAME</columns>
    <columns>Mensaje__c</columns>
    <columns>Activo__c</columns>
    <columns>Modulo_SLE__c</columns>
    <columns>Cuenta__c</columns>
    <columns>Contrato__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas las alertas</label>
</ListView>